--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cors": "^2.8.5",
     "cross-env": "7.0.3",
     "express": "^4.17.1",
+    "express-mongoose": "^0.1.0",
     "express-validation": "3.0.8",
     "express-winston": "^4.2.0",
     "helmet": "4.6.0",
