register user api

--- a/app-server/package.json
+++ b/app-server/package.json
@@ -18,7 +18,8 @@
     "url": "https://github.com/samuelpsouza/lembrete/issues"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.5.4"
   },
   "devDependencies": {
     "eslint": "^8.23.0",
